Include AWO & ways to hook into loading progress

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-loading-bar [progress]="loadingProgress" [message]="loadingMessage"></app-loading-bar>
+<app-loading-bar [progress]="loadingProgress" [status]="loadingStatus"></app-loading-bar>
