--- a/src/app/loading-bar/loading-bar.component.html
+++ b/src/app/loading-bar/loading-bar.component.html
@@ -1,6 +1,6 @@
 <div class="progress">
-  <div class="progress-bar" role="progressbar" [ngStyle]="{'width.%': progress}"></div>
-  <div class="progress-status-wrapper">
-    <div class="progress-status">{{ message }}</div>
-  </div>
+    <div class="progress-bar" role="progressbar" [ngStyle]="{'width.%': progress}"></div>
+    <div class="progress-status-wrapper">
+        <div class="progress-status">{{ status }}</div>
+    </div>
 </div>
