Update progress bar as AWO loads

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-loading-bar [progress]="loadingProgress" [status]="loadingStatus"></app-loading-bar>
+<app-loading-bar
+    [class.show]="loading" class="step"
+    [progress]="loadingProgress"
+    [status]="loadingStatus">
+</app-loading-bar>
