--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/* Elements fade in/out support */
+.show {
+    opacity: 1 !important;
+}
+
+.step {
+    opacity: 0;
+    transition: .5s ease-in-out all;
+}
