Fully load and initialize game in starting state
* Properly loads the game and starts the main loop upon load

* Adds timeout and transition classes to canvas element so
  initial load isn't too rough

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loading-bar
-    [class.show]="loading" class="step"
+    [class.show]="loading" class="step loading-bar"
     [progress]="loadingProgress"
     [status]="loadingStatus">
 </app-loading-bar>
