Change way canvas element is fetched, remove id

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     [status]="loadingStatus">
 </app-loading-bar>
 
-<canvas id="canvas" #gameCanvas></canvas>
+<canvas #gameCanvas></canvas>
 
 <router-outlet></router-outlet>
 
