Add main & design-room pages

--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -2,11 +2,9 @@
     <div class="main-menu box">
         <div class="inner">
             <ul class="list">
-                <li><a>Quickplay</a></li>
-                <li><a>Design Room</a></li>
+                <li><a routerLink="/">Main</a></li>
+                <li><a routerLink="/design-room">Design Room</a></li>
             </ul>
         </div>
     </div>
 </div>
-
-<!--<app-message-box></app-message-box>-->
