--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<app-loading-bar
-    [class.show]="loading" class="step loading-bar"
-    [progress]="loadingProgress"
-    [status]="loadingStatus">
-</app-loading-bar>
-
+<app-loading></app-loading>
 <canvas #gameCanvas></canvas>
-
 <router-outlet></router-outlet>
 
 <!--<app-message-box></app-message-box>-->
