--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loading></app-loading>
-<canvas #gameCanvas></canvas>
+<app-game></app-game>
 <router-outlet></router-outlet>
 
 <!--<app-message-box></app-message-box>-->
