--- a/src/app/page-main/page-main.component.html
+++ b/src/app/page-main/page-main.component.html
@@ -1,3 +1,3 @@
 <!-- TODO: Logo here -->
 
-<app-nav-menu></app-nav-menu>
+<app-nav-menu *ngIf="gameService.initialized && !loadingService.loading"></app-nav-menu>
