--- a/src/app/page-design-room/editor-tools/editor-tools.component.html
+++ b/src/app/page-design-room/editor-tools/editor-tools.component.html
@@ -10,7 +10,7 @@
                         *ngFor="let tileType of tileData"
                         (click)="updatedSelectedTile(tileType)"
                         [ngStyle]="{
-                            'background-image': 'url(' + tileType.variations[0].imageDataURL + ')',
+                            'background-image': 'url(' + tileType.variations[0].image.dataURL + ')',
                             'border': (tileType === selectedTileType) ? '1px solid red' : 'none'
                         }"
                     >
