--- a/src/app/page-design-room/editor-tools/editor-tools.component.css
+++ b/src/app/page-design-room/editor-tools/editor-tools.component.css
@@ -26,6 +26,15 @@
 .tile-selection {
     width: 64px;
     height: 64px;
+
+    border: 2px solid transparent;
+}
+
+.tile-selection.selected {
+    border: 2px solid red;
+}
+
+.tile-selection .image {
     -webkit-background-size: cover;
     background-size: cover;
 
@@ -36,4 +45,13 @@
     image-rendering: pixelated;
     image-rendering: optimize-contrast;
     -ms-interpolation-mode: nearest-neighbor;
+
+    width: 64px;
+    height: 64px;
+}
+
+.tile-selection .image.tall {
+    height: 128px;
+    position: relative;
+    top: -64px;
 }
