Display selectable list of variations under type
* Can now select a tile variation under the currently
  selected tile type

* UI still rough

--- a/src/app/page-design-room/editor-tools/editor-tools.component.css
+++ b/src/app/page-design-room/editor-tools/editor-tools.component.css
@@ -20,7 +20,7 @@
 
 .tile-selection-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .tile-selection {
